CMAKE_MINIMUM_REQUIRED(VERSION 3.5)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
PROJECT(MAGE LANGUAGES CXX VERSION 0.0.1)
SET(SRC_LIST "mage_demo.cc")
INCLUDE_DIRECTORIES(/opt/intel/sgxsdk/include)

MESSAGE(STATUS "This is BINARY dir " ${MAGE_BINARY_DIR})
MESSAGE(STATUS "This is SOURCE dir " ${MAGE_SOURCE_DIR})
ADD_EXECUTABLE(mage_demo ${SRC_LIST})
